--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.json', name: 'json', version: '20160810'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
 }
