Update .ignore file so to ignore all contents of .idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ out/
 atlassian-ide-plugin.xml
 
 # All contents of .idea folder
-.idea/
+.idea/*
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
