Update .ignore file so to ignore all contents of .idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,4 @@ out/
 atlassian-ide-plugin.xml
 
 # All contents of .idea folder
-.idea/*
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+.idea/
